--- a/pepeizqs deals web/Pages/Bundle.cshtml
+++ b/pepeizqs deals web/Pages/Bundle.cshtml
@@ -6,90 +6,4 @@
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-
-<div style="display: flex; align-items: center;">
-	<div style="width: 40%;">
-		<div class="perfil">
-			@if (Model.bundle.Tipo == Bundles2.BundleTipo.HumbleBundle)
-			{
-				<div style="display: flex; align-items: center;">
-					<a href="@Herramientas.EnlaceAcortador.Generar(Model.bundle.Enlace, Model.bundle.Tipo)" target="_blank" style="width: 30%;">
-						<img src="@Bundles2.BundlesCargar.DevolverBundle(Model.bundle.Tipo).ImagenesExtra[0]" style="max-width: 100%;" />
-					</a>
-					<a href="@Herramientas.EnlaceAcortador.Generar(Model.bundle.Enlace, Model.bundle.Tipo)" target="_blank" style="width: 40%; padding-left: 15px; padding-right: 15px;">
-						<img src="@await Herramientas.Imagenes.DescargarYGuardar(Model.bundle.ImagenBundle, "bundles", @Model.bundle.Id.ToString(), "header", HttpContext.Request.Host.Value)" style="max-width: 100%;" />
-					</a>
-					<a href="@Herramientas.EnlaceAcortador.Generar(Model.bundle.Enlace, Model.bundle.Tipo)" target="_blank" style="width: 30%;">
-						<img src="@Bundles2.BundlesCargar.DevolverBundle(Model.bundle.Tipo).ImagenesExtra[1]" style="max-width: 100%;" />
-					</a>
-				</div>
-			}
-			else
-			{
-				<div>
-					<a href="@Herramientas.EnlaceAcortador.Generar(Model.bundle.Enlace, Model.bundle.Tipo)" target="_blank">
-						<img src="@await Herramientas.Imagenes.DescargarYGuardar(Model.bundle.ImagenBundle, "bundles", @Model.bundle.Id.ToString(), "header", HttpContext.Request.Host.Value)" style="max-width: 100%;" />
-					</a>
-				</div>
-			}
-
-			<a href="@Herramientas.EnlaceAcortador.Generar(Model.bundle.Enlace, Model.bundle.Tipo)" class="boton-pequeño" style="padding: 10px; text-align: center; margin-top: 30px;" target="_blank">
-				@Herramientas.Idiomas.CogerCadena(Model.idioma, "Bundles.String3")
-			</a>
-
-			@if (Model.bundle.Pick == true)
-			{
-				<div style="margin-top: 20px; text-align: center;">
-					@Html.Raw(Model.MostrarMensajePick(Model.bundle.Tiers))
-				</div>
-			}
-		</div>
-
-		<div style="margin-top: 20px; text-align: center; font-size: 14px;">
-			@Model.MostrarFechaTermina(Model.bundle.FechaTermina)
-		</div>
-	</div>
-
-	<div style="width: 60%; padding-left: 20px;">
-		@if (Model.bundle.Pick == false)
-		{
-			@foreach (var tier in Model.OrdenarTiers(Model.bundle.Tiers))
-			{
-				<div class="perfil" style="margin-top: 10px; margin-bottom: 10px; padding: 30px;">
-					<div style="text-align: center; margin-bottom: 20px;">
-						@Model.MostrarPrecio(tier)
-					</div>
-
-					<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
-						@foreach (var juego in Model.bundle.Juegos)
-						{
-							@if (juego.Tier.Posicion == tier.Posicion)
-							{
-								<div style="text-align: center;">
-									<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent;">
-										<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagen, "juegos", juego.JuegoId.ToString(), "capsule_231x87", HttpContext.Request.Host.Value)" style="max-width: 100%;" />
-									</a>
-								</div>
-							}
-						}
-					</div>
-				</div>
-			}
-		}
-		else
-		{
-			<div class="perfil" style="margin-top: 10px; margin-bottom: 10px; padding: 30px;">
-				<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
-					@foreach (var juego in Model.bundle.Juegos)
-					{
-						<div style="text-align: center;">
-							<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent;">
-								<img src="@await Herramientas.Imagenes.DescargarYGuardar(juego.Imagen, "juegos", juego.JuegoId.ToString(), "capsule_231x87", HttpContext.Request.Host.Value)" style="max-width: 100%;" />
-							</a>
-						</div>
-					}
-				</div>
-			</div>
-		}
-	</div>
-</div>
+@(await Html.RenderComponentAsync<Componentes.Secciones.Bundle>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, bundle = Model.bundle }))
