--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -467,7 +467,7 @@
 
                                                     <div style="padding-left: 15px;">
                                                         <a href="/game/@juego.Id.ToString()" target="_blank">
-                                                            <img src="@juego.Imagenes.Capsule_231x87" style="width: 231px; height: 87px;" />
+                                                            <img src="@juego.Imagenes.Header_460x215" style="width: 230px; height: 112px;" />
                                                         </a>
                                                     </div>
 
